miniextendr-macros/tests/ui/default_invalid_syntax.stderr
error: cannot find attribute `default` in this scope
 --> tests/ui/default_invalid_syntax.rs:6:18
  |
6 | fn bad_default(#[default = "{{{{"] x: i32) -> i32 {
  |                  ^^^^^^^
